--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<title>Tic Tac Toe</title>
 	</head>
 	<body>
-		<a href="home.html">Play Tic Tac Toe</a>
-		<a href="responsiveForm.html">Responsive Form</a>
+		<h1>Menu</h1>
+		<p>My works at one place.</p>
+		<ol>
+			<li><a href="home.html">Play Simple Tic Tac Toe game</a></li>
+			<li><a href="responsiveForm.html">Responsive form</a></li>
+		</ol>
 	</body>
 </html>
