--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1>Menu</h1>
 		<p>My works at one place.</p>
 		<ol>
-			<li><a href="home.html">Play Simple Tic Tac Toe game</a></li>
+			<li><a href="ticTacToe.html">Play Simple Tic Tac Toe game</a></li>
 			<li><a href="responsiveForm.html">Responsive form</a></li>
 		</ol>
 	</body>
