--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Tic Tac Toe</title>
-		<link rel="stylesheet" type="text/css" href="home.css">
+		<link rel="stylesheet" type="text/css" href="ticTacToe.css">
 	</head>
 	<body>
 		<h1>Tic Tac Toe</h1>
@@ -35,6 +35,6 @@
 		<ul>
 			<li><a href="https://www.youtube.com/watch?v=Y-GkMjUZsmM&t=2167s">Build Tic Tac Toe with JavaScript - Tutorial.</a></li>
 		</ul>
-		<script src="home.js"></script>
+		<script src="ticTacToe.js"></script>
 	</body>
 </html>
