created Styles for font

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Menu</title>
+		<style>
+			.font {
+				font-family: monospace;
+				font-size: 30px;
+				font-weight: bold;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>Menu</h1>
-		<p>My works at one place.</p>
+		<h1 class="font">Menu</h1>
+		<p class="font">My works at one place.</p>
 		<ol>
-			<li><a href="ticTacToe.html">Play Simple Tic Tac Toe game</a></li>
-			<li><a href="responsiveForm.html">Responsive form</a></li>
+			<li><a class="font" href="ticTacToe.html">Play Simple Tic Tac Toe game</a></li>
+			<li><a class="font" href="responsiveForm.html">Responsive form</a></li>
 		</ol>
 	</body>
 </html>
