Added Recorder link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<style>
 			.font {
 				font-family: monospace;
-				font-size: 30px;
-				font-weight: bold;
+				font-size: 10px;
 			}
 		</style>
 	</head>
@@ -17,6 +16,7 @@
 		<ol>
 			<li><a class="font" href="ticTacToe.html">Play Simple Tic Tac Toe game</a></li>
 			<li><a class="font" href="responsiveForm.html">Responsive form</a></li>
+			<li><a class="font" href="record.html">Recorder App</a></li>
 		</ol>
 	</body>
 </html>
